  * Cupt:
    - System:
      - Resolver:
        - Fixed erroneous autovivification of package entries which are not
          installed when checking for sticks of candidate versions than can
          satisfy forward dependencies.
        - Fixed wrong sharing 'fake satisfied' entries between package entries
          in different solution branches.
  * doc:
    - cupt.1:
      - Renewed the list of supported APT configuration options.
      - Mentioned the way to send bug reports and IRC discussion channel.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Wed, 20 May 2009 00:09:32 +0300

cupt (0.1.3) unstable; urgency=low

  * debian/control:
    - Fixed misspelled Recommends 'liblocale-gettext-perl'.
    - Allow DM uploads.
  * cupt:
    - 'show' subcommand:
      - Show also source version if present.
    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
    - 'policy' subcommand:
      - When called without arguments, print available Releases.
    - Exclude superfluous 'use Locale::gettext', Cupt::Core module do all
      needed manipulations to provide gettext. Thanks to
      David Broome <dbroome@gmail.com>. (Closes: #529167)
  * Cupt:
    - Cache:
      - New method 'get_binary_release_data'.
      - New method 'get_source_release_data'.
      - Include base URI in release info.
      - Installed versions of packages now have archive 'installed',
        codename 'now', vendor 'dpkg' in release info.
      - BinaryVersion:
        - New field 'source_package_version'. It's got filled when the source
          version for package differs from the binary one.
      - Pkg:
        - [API break] Renamed to 'Package'.
        - [API break] Renamed method 'versions' to 'get_versions'.
      - Skip 'Explanation: ' lines when parsing preferences. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
    - Download: